# k2-core

./: .gitignore  Makefile  README.md
.github/workflows/: tests.yml
app/: .env.example  .env.test  Dockerfile  Makefile  README.md  pyproject.toml
app/data/: seed.json
app/migrations/: alembic.ini  env.py
app/migrations/versions/: 2026_06_03_11:38-9542379ca3b7_.py
app/scripts/: seed.py
app/src/: main.py
app/src/api/: app.py
app/src/api/core/: utils.py
app/src/api/core/application/: factory.py  logger.py  openapi.py
app/src/api/core/dependencies/: __init__.py  db.py  pagination.py
app/src/api/core/errors/: __init__.py  exceptions.py  handlers.py
app/src/api/core/middlewares/: __init__.py  context.py  logging.py  query_params.py  response_time.py
app/src/api/core/schemas/: __init__.py  base.py  pagination.py  response.py  utils.py
app/src/api/v1/exceptions/: __init__.py  client.py  order.py  product.py  warehouse.py
app/src/api/v1/routers/: __init__.py
app/src/api/v1/routers/clients/: router.py  schemas.py
app/src/api/v1/routers/orders/: router.py  schemas.py
app/src/api/v1/routers/products/: router.py  schemas.py
app/src/api/v1/routers/warehouses/: router.py  schemas.py
app/src/config/: __init__.py
app/src/infrastructure/: db.py
app/src/models/: __init__.py  base.py  enums.py
app/src/models/client/: __init__.py  client.py
app/src/models/order/: order.py  order_item.py
app/src/models/product/: product.py
app/src/models/warehouse/: stock_item.py  warehouse.py
app/src/repositories/api/: __init__.py  clients.py  orders.py  pagination.py  products.py  warehouses.py
app/src/services/: orders.py
app/tests/: __init__.py  conftest.py
app/tests/factories/: clients.py  orders.py  products.py  warehouses.py
app/tests/test_api/: test_clients.py  test_orders.py  test_products.py  test_warehouses.py
app/tests/utils/: database.py
docker/: .env.example  .env.test  compose-prod.yml  compose-test.yml  postgres.conf
