[project]
name = "API"
version = "1.4.0"
description = "API orders"
authors = [{ name = "Kostyantin Ostapenko", email = "rota199804@gmail.com" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic[email] (>=2.13.3,<3.0.0)",
    "pydantic-settings>=2.13.1",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.48",
    "alembic>=1.16.2",
    "greenlet>=3.2.3",
    "redis>=7.3.0",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "trio (>=0.33.0,<0.34.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "0.15.6"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.28.1"
asyncpg = "^0.31.0"
pytest-cov = "^7.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/free.py",
    "src/main.py",
    "src/**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# -------------------------
# Ruff Configuration
# -------------------------
[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "S", "C90", "N", "ANN", "ASYNC", "T20"]
ignore = [
    "E501",

    # FastAPI Depends/Query/Path in default arguments
    "B008",

    # Pydantic/FastAPI serializers sometimes need Any
    "ANN401",

    # Keep classic Generic[...] for Pydantic generic models
    "UP046",

    # Project architecture name
    "N818",
]
extend-select = ["RUF100"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**" = ["S101"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "sqlalchemy.orm.declared_attr",
    "sqlalchemy.orm.declared_attr.directive",
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false